View Source Again

--- a/viewsource.html
+++ b/viewsource.html
@@ -1,10 +1,58 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>View Source</title>
-  </head>
-  <body>
-    <h1>View Source</h1>
-  </body>
+
+<!-- This is a comment in HTML -->
+
+    <head>
+        <meta charset="utf-8">
+        <title>View Source</title>
+
+
+        <style>
+body {font-family: Garamond, serif;}
+span.a {  font-size: 15px;}
+span.b {  font-size: 100%;}
+span.c {  font-size: 200%;}
+pb.small {font-variant-caps: small-caps;}
+left-align {text-align: left;}
+center-align {text-align: center;}
+right-align {text-align: right;}
+
+        </style>
+    </head>
+
+<body>
+    
+<span class="b"><h1><i>Polyglottal Stop</i></h1></span>
+
+
+<div style="background-color:#f4f3ec;padding:15px;text-align: center;">
+   
+    <p class="left">
+    <pb class="small">
+    <span class="c">T</span><span class="b">he</span></pb> parrots were expelled<br>&nbsp;&nbsp; &nbsp;from their &nbsp; &nbsp; &nbsp; &nbsp; joyous<br>surburban<br>cage <br>to a&nbsp;&nbsp; &nbsp;v a l l e y
+</div>
+
+<p></p>
+
+<div style="background-color:#f4f3ec;padding:15px;text-align: right;">
+    <p class="right">
+    far<br>from human<br>flattery & rage<br>& when they gave<br>voice to their exile<br>the parrots heard<br>the parrots heard<br>e&nbsp; c&nbsp; h&nbsp; o&nbsp; e&nbsp; s
+</div></p>
+
+
+        <div style="background-color:black;color:white;padding:100px;">
+        <p class="left">& were struck dumb<br>& no bird heard no word<br>
+    </div></p>
+            
+            <div style="background-color:rgba(34, 168, 76, 0.676);color:rgb(15, 105, 21);padding:200px;text-align: center;">
+                <p class="right-align">in a green<br>old<br>age</p>
+    </div>
+
+
+    <div style="background-color:#f4f3ec;text-align: right;">
+        <p class="right">MICHAEL HOROVITZ</p></div>
+
+</body>
+
 </html>
