--- a/viewsource.html
+++ b/viewsource.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 
-<!-- This is a comment in HTML -->
+<!-- Assignment: View Source
+    Poem from: Astronauts of Inner Space (1966)-->
 
     <head>
         <meta charset="utf-8">
@@ -9,9 +10,16 @@
 
 
         <style>
+h1 {
+    text-align: center;
+}
+body {
+    font-family: 'Aleo';font-size: 22px;
+}
+
 body {font-family: Garamond, serif;}
 span.a {  font-size: 15px;}
-span.b {  font-size: 100%;}
+span.b {  font-size: 150%;}
 span.c {  font-size: 200%;}
 pb.small {font-variant-caps: small-caps;}
 left-align {text-align: left;}
@@ -30,22 +38,22 @@ right-align {text-align: right;}
    
     <p class="left">
     <pb class="small">
-    <span class="c">T</span><span class="b">he</span></pb> parrots were expelled<br>&nbsp;&nbsp; &nbsp;from their &nbsp; &nbsp; &nbsp; &nbsp; joyous<br>surburban<br>cage <br>to a&nbsp;&nbsp; &nbsp;v a l l e y
+        <span style="vertical-align: -10px;"><span class="c">T</span></span><span class="b">he</span></pb> parrots were expelled<br>&nbsp;&nbsp; &nbsp;from their &nbsp; &nbsp; &nbsp; &nbsp; joyous<br>surburban<br>cage <br>to a&nbsp;&nbsp; &nbsp; v &nbsp;<span style="vertical-align: -10px;">a</span>&nbsp; <span style="vertical-align: -20px;">l</span>&nbsp; <span style="vertical-align: -20px;">l</span> &nbsp; <span style="vertical-align: -10px;">e</span> &nbsp; y
 </div>
 
 <p></p>
 
 <div style="background-color:#f4f3ec;padding:15px;text-align: right;">
     <p class="right">
-    far<br>from human<br>flattery & rage<br>& when they gave<br>voice to their exile<br>the parrots heard<br>the parrots heard<br>e&nbsp; c&nbsp; h&nbsp; o&nbsp; e&nbsp; s
+    far<br>from human<br>flattery & rage<br>& when they gave<br>voice to their exile<br>the parrots heard<br>the parrots heard<br>e&nbsp;&nbsp; c&nbsp;&nbsp; h&nbsp;&nbsp; o&nbsp;&nbsp; e&nbsp;&nbsp; s
 </div></p>
 
 
-        <div style="background-color:black;color:white;padding:100px;">
+        <div style="background-color:rgba(0, 0, 0, 0.195);color:white;padding:100px;">
         <p class="left">& were struck dumb<br>& no bird heard no word<br>
     </div></p>
             
-            <div style="background-color:rgba(34, 168, 76, 0.676);color:rgb(15, 105, 21);padding:200px;text-align: center;">
+            <div style="background-color:rgba(34, 168, 76, 0.676);color:rgba(0, 0, 0, 0.748);padding:30px 50px 75px 100px;text-align: right;">
                 <p class="right-align">in a green<br>old<br>age</p>
     </div>
 
