--- a/viewsource.html
+++ b/viewsource.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <!-- Assignment: View Source
-    Poem from: Astronauts of Inner Space (1966)-->
+    Poem from: Astronauts of Inner Space (1966)
+    Written by: Michael Horovitz -->
 
     <head>
         <meta charset="utf-8">
